# rhythm-machine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
KiCad/: #auto_saved_files#  _autosave-rhythm-machine.kicad_sch  fp-info-cache  fp-lib-table  rhythm-machine.kicad_pcb  rhythm-machine.kicad_prl  rhythm-machine.kicad_pro  rhythm-machine.kicad_sch
KiCad/Library.pretty/: QRCode.kicad_mod  WS2812B_Strip_Single.kicad_mod
KiCad/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
assets/: Garden.note  Garden.yaml  README.md
inc/: audio.h  input.h  lcd.h  leds.h  machine.h  sd.h  song_data.h  state.h
models/: Rhythm_Machine.blend
src/: audio.cpp  input.cpp  lcd.cpp  leds.cpp  machine.cpp  main.cpp  sd.cpp  song_data.cpp
tools/: song_compiler.py  test_song.note  test_song.yaml
